[gd_scene load_steps=2 format=3 uid="uid://blue_lobster_boss_uid"]

[ext_resource type="Script" path="res://scripts/blue_lobster.gd" id="1_blue_lobster"]

[node name="BlueLobster" type="Node2D"]
script = ExtResource("1_blue_lobster")

[node name="Body" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 40.0
color = Color(0, 0, 1, 1)

[node name="LeftClaw" type="ColorRect" parent="."]
offset_left = 60.0
offset_top = -60.0
offset_right = 100.0
offset_bottom = -20.0
color = Color(0, 0, 0.8, 1)

[node name="RightClaw" type="ColorRect" parent="."]
offset_left = 60.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
color = Color(0, 0, 0.8, 1)

[node name="Label" type="Label" parent="."]
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 40.0
text = "Blue Lobster"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBarBack" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = 46.0
offset_right = 60.0
offset_bottom = 54.0
color = Color(0.12, 0.12, 0.15, 0.85)

[node name="HealthBarFill" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = 46.0
offset_right = 60.0
offset_bottom = 54.0
color = Color(0.8, 0.4, 0.4, 1)

[node name="ShieldBarFill" type="ColorRect" parent="."]
offset_left = -60.0
offset_top = 46.0
offset_right = 60.0
offset_bottom = 54.0
color = Color(0.4, 0.6, 0.8, 1)
